<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:padding="10dp"
            android:text="@string/masukkan_angka"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textMessage"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            android:text="@string/silahkan_masukan_jenis_angka"
            android:paddingBottom="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/button_style"
            android:text="@string/numberPlus"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textMessage" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="12sp"
            android:background="@drawable/button_style"
            android:text="@string/numberMinus"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>