<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_first_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/first_image_number"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toStartOf="@+id/iv_second_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_second_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/second_image_number"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toEndOf="@+id/iv_first_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_1"
        app:layout_constraintEnd_toEndOf="@+id/iv_first_number"
        app:layout_constraintStart_toStartOf="@+id/iv_first_number"
        app:layout_constraintTop_toBottomOf="@+id/iv_first_number" />

    <Button
        android:id="@+id/btn_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_1"
        app:layout_constraintEnd_toEndOf="@+id/iv_second_number"
        app:layout_constraintStart_toStartOf="@+id/iv_second_number"
        app:layout_constraintTop_toBottomOf="@+id/iv_second_number" />


</androidx.constraintlayout.widget.ConstraintLayout>